0.1.2
-----

* Optmised C code to avoid use of slow Ruby ivars (up to 100% speed improvements!).

0.1.1
-----

* Converted to gem (previously was just a .c file).
* Added 3D chunks.
* Optimised chunk operations.
* Added Generator#[x, y]
* Added Generator#[x, y, z]
* Added Generator#chunk x, y, size_x, size_y
* Added Generator#chunk x, y, z, size_x, size_y, size_z
* Added Generator#persistence, #seed and #octave accessors.
* Added Perlin's Simplex generation (much faster).
* A number of general fixes (added rspec tests).